--- a/public/signup.html
+++ b/public/signup.html
@@ -51,10 +51,10 @@
 
 							<div class="sign__group sign__group--checkbox">
 								<input id="remember" name="remember" type="checkbox" checked="checked">
-								<label for="remember">J'aime être <a href="privacy.html">Respecté</a></label>
+								<label for="remember">J'aime être <a href="#">Respecté</a></label>
 							</div>
 							
-							<button class="sign__btn" type="button">Inscription!</button>
+							<button class="sign__btn" type="button">Inscription</button>
 
 							<span class="sign__delimiter">ou</span>
 
