--- a/public/404.html
+++ b/public/404.html
@@ -21,7 +21,7 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="author" content="Dmitry Volkov">
-	<title>FlixTV – Movies & TV Shows, Online cinema HTML Template</title>
+	<title>BeeMovies.buzz</title>
 
 </head>
 <body>
@@ -33,8 +33,8 @@
 					<div class="page-404__wrap">
 						<div class="page-404__content">
 							<h1 class="page-404__title">404</h1>
-							<p class="page-404__text">The page you are looking for not available!</p>
-							<a href="index.html" class="page-404__btn">go back</a>
+							<p class="page-404__text">La page que vous cherchez est indisponible!</p>
+							<a href="index.html" class="page-404__btn">retour</a>
 						</div>
 					</div>
 				</div>
