--- a/public/forgot.html
+++ b/public/forgot.html
@@ -21,7 +21,7 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="author" content="Dmitry Volkov">
-	<title>FlixTV – Movies & TV Shows, Online cinema HTML Template</title>
+	<title>BEE Movies buzz WannaBees</title>
 
 </head>
 <body>
@@ -38,17 +38,17 @@
 							</a>
 
 							<div class="sign__group">
-								<input type="text" class="sign__input" placeholder="Email">
+								<input type="text" class="sign__input" placeholder="courriel">
 							</div>
 
 							<div class="sign__group sign__group--checkbox">
 								<input id="remember" name="remember" type="checkbox" checked="checked">
-								<label for="remember">I agree to the <a href="privacy.html">Privacy Policy</a></label>
+								<label for="remember">J'accepte la  <a href="privacy.html"> "Privacy Policy"</a></label>
 							</div>
 							
-							<button class="sign__btn" type="button">Send</button>
+							<button class="sign__btn" type="button">Envoyer</button>
 
-							<span class="sign__text">We will send a password to your Email</span>
+							<span class="sign__text">Ensuite, voir votre courriel</span>
 						</form>
 						<!-- end authorization form -->
 					</div>
